<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/layout_margin_small"
    android:layout_margin="@dimen/layout_margin_medium"
    app:cardCornerRadius="@dimen/cardElevation_low"
    app:cardElevation="@dimen/layout_margin_medium"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/primaryDarkColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_small"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/imageIsPotentiallyHazardous"
            android:layout_width="@dimen/space_100"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/layout_margin_medium"
            android:layout_marginBottom="@dimen/layout_margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/asteroidName"
            tools:src="@drawable/ic_emoji_friendly"
            android:contentDescription="@string/image_is_potentially_hazardous" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/text_block_width_small"
            android:layout_height="@dimen/icon_size_tiny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageIsPotentiallyHazardous"
            app:srcCompat="@drawable/ic_globe"
            android:contentDescription="@string/image_closet_approach_to_earth" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/text_block_width_small"
            android:layout_height="@dimen/icon_size_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageIsPotentiallyHazardous"
            app:srcCompat="@drawable/ic_meteor"
            android:contentDescription="@string/image_asteroid_speed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textDistanceFromEarthAu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="0.30" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/asteroidName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="(2014 WC5)" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textAsteroidSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_marginStart="@dimen/layout_margin_medium"
            android:layout_marginTop="@dimen/layout_margin_small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="45.450" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

