<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.features.main.domain.entities.AsteroidsFeedItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/layout_margin_small"
        android:layout_margin="@dimen/layout_margin_medium"
        app:cardCornerRadius="@dimen/cardElevation_low"
        app:cardElevation="@dimen/layout_margin_medium"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryDarkColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageIsPotentiallyHazardous"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/asteroidName"
                tools:src="@drawable/ic_emoji_friendly"
                android:contentDescription="@string/image_is_potentially_hazardous" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageIsPotentiallyHazardous"
                app:srcCompat="@drawable/ic_globe"
                android:contentDescription="@string/image_closet_approach_to_earth" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="127dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageIsPotentiallyHazardous"
                app:srcCompat="@drawable/ic_meteor"
                android:contentDescription="@string/image_asteroid_speed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textDistanceFromEarthAu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="0.30" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/asteroidName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="(2014 WC5)" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textAsteroidSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:text="45.450" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
