<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerPictureOfTheDayDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/pictureOfTheDayDetailsImageView"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:accessibilityLiveRegion="polite"
            tools:src="@drawable/ic_astronaut_image_not_found" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsTextBalonImageNotLoaded"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_text_ballon"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:text="@string/image_not_loaded_warning"
            android:textColor="@color/textColorGrey"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/pictureOfTheDayDetailsImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsLabelWithDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/label_picture_of_the_day_format_details"
            android:textColor="@color/textColorGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pictureOfTheDayDetailsImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/textColorGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pictureOfTheDayDetailsLabelWithDate"
            tools:text="A Plutonian Landscape" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsLabelCopyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorGrey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pictureOfTheDayDetailsTitle"
            android:text="@string/copyright" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsCopyrightAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/textColorGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pictureOfTheDayDetailsLabelCopyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pictureOfTheDayDetailsLabelCopyright"
            app:layout_constraintTop_toTopOf="@+id/pictureOfTheDayDetailsLabelCopyright"
            tools:text="Russell Croman" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pictureOfTheDayDetailsExplanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/textColorGrey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pictureOfTheDayDetailsLabelCopyright"
            tools:text="@string/sample_text_picture_of_the_day_explanation" />

        <ImageView
            android:id="@+id/pictureOfTheDayDetailsCloseFullScreenView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/toggle_full_screen_view"
            android:elevation="10dp"
            android:src="@drawable/ic_fullscreen_exit"
            app:layout_constraintBottom_toBottomOf="@+id/pictureOfTheDayDetailsImageView"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/pictureOfTheDayDetailsToggleHighDefinition"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/toggle_full_screen_view"
            android:elevation="10dp"
            android:src="@drawable/ic_high_definition_is_off"
            app:layout_constraintBottom_toTopOf="@+id/pictureOfTheDayDetailsCloseFullScreenView"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBarHighDefinitionImage"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:progressTint="@color/secondaryColor"
            android:layout_height="5dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/pictureOfTheDayDetailsImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>